row hover effect

--- a/index.css
+++ b/index.css
@@ -146,3 +146,7 @@ body {
 .user-table tbody .act-btn:hover {
   cursor: pointer;
 }
+
+.user-table .row:hover {
+  background-color: rgba(0, 152, 121, 0.75);
+}
