--- a/index.css
+++ b/index.css
@@ -114,6 +114,7 @@ body {
   font-family: sans-serif;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   table-layout: fixed;
+  margin-bottom: 50px;
 }
 
 .user-table td {
