--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: sans-serif;
   background-color: white;
+}
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: border-box;
 }
 
 .header {
@@ -28,6 +34,7 @@ body {
 
 .add-user:hover {
   cursor: pointer;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .add-form-container.active {
@@ -37,13 +44,16 @@ body {
 .form {
   display: none;
   position: absolute;
-  top: 0;
-  width: 100%;
+  width: 600px;
   min-height: 400px;
   background-color: white;
   flex-direction: column;
-  border: 1px solid black;
-  padding-top: 100px;
+  padding: 100px 0;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .form.active {
@@ -51,7 +61,7 @@ body {
 }
 
 .form > * {
-  width: 50%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -63,6 +73,10 @@ body {
   width: fit-content;
   margin-bottom: 20px;
   cursor: pointer;
+}
+
+.form .back:hover {
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .form .label {
@@ -164,5 +178,8 @@ body {
 @media only screen and (max-width: 670px) {
   .user-table td.action > * {
     margin: 20px auto;
+  }
+  .form {
+    width: 90%;
   }
 }
